--- a/index.html
+++ b/index.html
@@ -246,12 +246,12 @@ button.glass-button:hover {
     text-align:center;
 }
 .owner-toggle {
-    padding: 6px 12px;      /* 🔽 from 10px 18px */
-    border-radius: 8px;     /* 🔽 from 10px */
+    padding: 6px 12px;      
+    border-radius: 8px;     
     border: 2px solid #ff0000;
     font-family: 'Orbitron', sans-serif;
     font-weight: bold;
-    font-size: 12px;        /* 🔽 from 14px */
+    font-size: 12px;        
     color: #fff;
     cursor: pointer;
 
@@ -326,23 +326,20 @@ z-index:1000000;
 <div id="mainContent" style="display:none;">
   <div class="center-wrapper">
     <div class="container">
-      <!-- Glassy inner box -->
+      <!-- Glassy inner box (smaller size) -->
       <div class="inner-box" style="
           background: rgba(255,255,255,0.05);
           backdrop-filter: blur(12px);
-          padding: 20px;
-          border-radius: 12px;
+          padding: 15px;
+          border-radius: 10px;
           border: 2px solid #ff0000;
-          box-shadow: 0 0 20px rgba(255,0,0,0.5);
+          box-shadow: 0 0 15px rgba(255,0,0,0.5);
           text-align:center;
+          width: 100%;
       ">
-          <div style="font-size:20px; color:#0ff; font-weight:bold; margin-bottom:10px;">Welcome</div>
-          <div id="welcomeUser" style="font-size:24px; color:#fff; font-weight:bold; margin-bottom:10px;"></div>
-          <div id="subscriptionInfo" style="font-size:18px; color:#ff0; font-weight:bold;"></div>
-      </div>
-    </div>
-  </div>
-</div>
+          <div style="font-size:18px; color:#0ff; font-weight:bold; margin-bottom:8px;">Welcome</div>
+          <div id="welcomeUser" style="font-size:20px; color:#fff; font-weight:bold; margin-bottom:8px;"></div>
+          <div id="subscriptionInfo" style="font-size:16px; color:#ff0; font-weight:bold; margin-bottom:12px;"></div>
 
       <!-- Game Select -->
    <div id="gameSelectWrapper">
