--- a/index.html
+++ b/index.html
@@ -325,22 +325,20 @@ z-index:1000000;
 <!-- Main content box -->
 <div id="mainContent" style="display:none;">
   <div class="center-wrapper">
-    <div class="container">
-      <!-- Glassy inner box (smaller size) -->
+    <div class="container" style="max-width:300px; padding:15px;">
+      <!-- Smaller inner box -->
       <div class="inner-box" style="
-          background: rgba(255,255,255,0.05);
+          background: rgba(0,0,0,0.6);
           backdrop-filter: blur(12px);
           padding: 15px;
           border-radius: 10px;
           border: 2px solid #ff0000;
-          box-shadow: 0 0 15px rgba(255,0,0,0.5);
           text-align:center;
-          width: 100%;
       ">
-          <div style="font-size:18px; color:#0ff; font-weight:bold; margin-bottom:8px;">Welcome</div>
-          <div id="welcomeUser" style="font-size:20px; color:#fff; font-weight:bold; margin-bottom:8px;"></div>
+          
+          <div id="welcomeUser" style="font-size:20px; color:#0ff; font-weight:bold; margin-bottom:8px;"></div>
           <div id="subscriptionInfo" style="font-size:16px; color:#ff0; font-weight:bold; margin-bottom:12px;"></div>
-
+          
       <!-- Game Select -->
    <div id="gameSelectWrapper">
     <select id="gameSelect">
