--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ button.glass-button:hover {
           
           <div class="user-info">
   <div class="info-line">🌐 Welcome</div>
-  <div class="info-line">🌐 <span id="Username"></span></div>
+  <div class="info-line">🌐 <span id="welcomeUser"></span></div>
   <div class="info-line">🌐 <span id="subscriptionInfo"></span></div>
 </div>
           
